k8s/app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: koth-api-service
  labels:
    app: koth-api-service
spec:
  type: NodePort
  selector:
    app: koth-api
  ports:
    - port: 8000
      targetPort: 8000
