k8s/app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: koth-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: api.koth
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: koth-api-service
                port:
                  number: 8000
